# stan-language-server

./: .gitignore  LICENSE  Makefile  README.md  extract_function_sigs.py  pyproject.toml  signatures.txt  stan-functions.txt
examples/: bernoulli.stan  pedantic_test.stan  test.stan
stan_language_server/: __init__.py  cli.py  server.py  stan-keywords.txt  utils.py
stan_vscode_client/: .vscodeignore  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json
stan_vscode_client/client/: package-lock.json  package.json
stan_vscode_client/client/src/: extension.ts
