[tool.poetry]
name = "stan-language-server"
version = "0.1.0"
description = "Language server implementation for STAN, using pygls."
authors = ["Leon Zong <leon@leonzong.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygls = "^1.3.1"

[tool.poetry.scripts]
stan-language-server = 'stan_language_server.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
